salesforce_sfdx_QA/main/default/objects/Case/fields/Company_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Mailing_Address__c</fullName>
    <label>Company Mailing Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>