salesforce_sfdx_QA/main/default/objects/Case/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>Contact Number of Requester</description>
    <inlineHelpText>Contact Number of Requester</inlineHelpText>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>