salesforce_sfdx_QA/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Requester Email</description>
    <inlineHelpText>Company Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>