salesforce_sfdx_QA/main/default/objects/Case/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>