salesforce_sfdx_QA/main/default/objects/Case/fields/First_Name_Of_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Of_Primary_Contact__c</fullName>
    <label>First Name Of Primary Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>