salesforce_sfdx_QA/main/default/objects/Case/fields/Have_you_had_this_issue_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_had_this_issue_before__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select the checkbox if you face this error before.</inlineHelpText>
    <label>Have you had this issue before?</label>
    <type>Checkbox</type>
</CustomField>