salesforce_sfdx_QA/main/default/objects/Case/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the Person creating case through Help Form</description>
    <label>Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>