salesforce_sfdx_QA/main/default/objects/Case/fields/Type_of_Corporation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Corporation__c</fullName>
    <label>Type of Corporation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>