salesforce_sfdx_QA/main/default/objects/Case/fields/What_are_you_trying_to_do__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_trying_to_do__c</fullName>
    <inlineHelpText>Please explain us what are you tring to do in portal?</inlineHelpText>
    <label>What are you trying to do?</label>
    <type>TextArea</type>
</CustomField>