salesforce_sfdx_QA/main/default/objects/Case/fields/What_Browser_are_you_Using__c.field-meta.xml
<CustomField>
    <fullName>What_Browser_are_you_Using__c</fullName>
    <inlineHelpText>Please select the browser you are using?</inlineHelpText>
    <label>What Browser are you Using?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Chrome</fullName>
            </value>
            <value>
                <fullName>Mozilla Firefox</fullName>
            </value>
            <value>
                <fullName>Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Slimjet</fullName>
            </value>
            <value>
                <fullName>UC Browser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>