salesforce_sfdx_QA/main/default/objects/Case/fields/What_type_of_problem_you_are_facing__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_problem_you_are_facing__c</fullName>
    <inlineHelpText>Explain what type of problem you are facing in portal?</inlineHelpText>
    <label>What type of problem you are facing?</label>
    <type>TextArea</type>
</CustomField>