salesforce_sfdx_QA/main/default/objects/Case/fields/Years_Under_Current_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Years_Under_Current_Ownership__c</fullName>
    <label>Years Under Current Ownership</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>