salesforce_sfdx_QA/main/default/objects/Case/listViews/Help_Form_Cases.listView-meta.xml
<ListView>
    <fullName>Help_Form_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Help_Form</value>
    </filters>
    <label>Help Form Cases</label>
</ListView>