salesforce_sfdx_QA/main/default/objects/Case/listViews/Q1_Case.listView-meta.xml
<ListView>
    <fullName>Q1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Q1</label>
    <queue>Q1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>